--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
     "presets": [
+        "es2015",
         "env",
         "react"
-    ]
+    ],
+    "plugins": ["transform-object-rest-spread"]
 }
