--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,16 +27,24 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.0.0",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.11",
+    "dateformat": "^3.0.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.1",
+    "popper.js": "^1.14.3",
     "react": "^16.3.1",
+    "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-super-select": "^1.0.15",
     "redux": "^3.7.2",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.5.3",
