--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,17 @@
   "license": "ISC",
   "devDependencies": {
     "body-parser": "^1.18.2",
+    "bson": "^2.0.5",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "mongoose": "^5.0.14",
+    "mongoose": "^5.0.16",
     "node-restful": "^0.2.6",
     "nodemon": "^1.17.3",
     "pm2": "^2.10.2"
+  },
+  "dependencies": {
+    "cascading-relations": "^0.7.9",
+    "mongodb": "^3.0.7",
+    "update": "^0.7.4"
   }
 }
