--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react": "^16.3.1",
     "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.1",
+    "react-input-mask": "^1.2.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
