--- a/httpserver/package.json
+++ b/httpserver/package.json
@@ -2,7 +2,7 @@
   "name": "httpserver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "production": "pm2 start src/index.js --name httpserver-oftalclinic-app"
   },
