Configurado o servidor dentro do front-end da aplicação

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "webpack-dev-server --mode \"development\" --progress --colors --inline --hot --open",
-    "production": "webpack --mode \"production\" --progress -p"
+    "production": "webpack --mode \"production\" --progress -p",
+    "run-server": "pm2 start src/httpserver.js --name todo-app"
   },
   "repository": {
     "type": "git",
