--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,13 +42,14 @@
     "react": "^16.3.1",
     "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.1",
-    "react-input-mask": "^1.2.2",
     "react-redux": "^5.0.7",
+    "react-redux-toastr": "^7.2.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-super-select": "^1.0.15",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
+    "redux-form-input-masks": "^1.0.1",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
