--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,13 @@
     "pm2": "^2.10.2"
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "cascading-relations": "^0.7.9",
+    "jsonwebtoken": "^8.2.1",
+    "lodash": "^4.17.10",
     "mongodb": "^3.0.7",
+    "save": "^2.3.2",
+    "save-dev": "^2.0.0",
     "update": "^0.7.4"
   }
 }
